Fixed burger menu clipping into pantry container

--- a/frontend/src/static/Pantrypage.css
+++ b/frontend/src/static/Pantrypage.css
@@ -5,7 +5,7 @@
     justify-content: flex-start;
     width: 100%;
     height: 100vh;
-    padding-top: 100px; /* Add padding to push down the content */
+    padding-bottom: 100px; /* Add padding to push down the content */
     background-color: #feead1;
     overflow-y: scroll;
     margin: 0;
